# skinoptics

./: README.md  pyproject.toml  readthedocs.yaml
datasets/colors/: cmfs.txt  rspds_A_D50_D65.txt  wps.txt
datasets/optical_properties/: EP_Salomatina.txt  SCC_Salomatina.txt  beta_oxy_Friebel.txt  ext_and_molarext_eum_Sarna.txt  ext_and_molarext_oxy_and_deo_Prahl.txt  ext_and_molarext_phe_Sarna.txt  iBCC_Salomatina.txt  molarext_bil_Li.txt  mua_fat_vanVeen.txt  mua_wat_Segelstein.txt  n_HY_Matiatou.txt  n_and_k_DE_Ding.txt  n_and_k_wat_Hale.txt  oxy_and_deo_Bosschaart.txt
datasets/spectra/Xiao2016/skindatabaseSpectra/: readmeSpectra.docx
docs/source/: 01_utils.rst  02_dataframes.rst  conf.py  index.rst  modules.rst
docs/source/_static/: tutorial_colors.html  tutorial_optical_properties.html  validation_Delta_E_00.html
skinoptics/: __init__.py  absorption_coefficient.py  anisotropy_factor.py  colors.py  dataframes.py  refractive_index.py  scattering_coefficient.py  utils.py
skinoptics/datasets/colors/: Lab_Alaluf2002.txt  Lab_Xiao2017.txt  Sharma2004_TableI.txt  rspds_C_D55_D75.txt  rspds_D55_D75.txt
skinoptics/datasets/optical_properties/: DE_Salomatina.txt  DE_Shimojo.txt  EP_Shimojo.txt  HY_Salomatina.txt  HY_Shimojo.txt  mua_wat_Hale.txt  nBCC_Salomatina.txt  n_AT_Matiatou.txt  n_and_k_EP_Ding.txt  n_and_k_wat_Segelstein.txt
skinoptics/datasets/spectra/Xiao2016/skindatabaseSpectra/: skin spectra data.xlsx
