[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "skinoptics"
version = "0.0.4"
authors = [
  {name="Victor Lima", email="victor.lima@ufscar.br"},
]
description = "SkinOptics: a python package with tools for building human skin computational models for Monte Carlo simulations of light transport"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows :: Windows 10",
]
dependencies = [
  "numpy>=2.3.4,<3.0.0",
  "scipy>=1.13.0,<2.0.0",
  "pandas>=2.2.2,<3.0.0"
]

[project.urls]
Homepage = "https://github.com/victorportog/skinoptics"

[tool.setuptools]
packages = ["skinoptics", "skinoptics.datasets", "skinoptics.datasets.optical_properties", "skinoptics.datasets.colors",
            "skinoptics.datasets.spectra", "skinoptics.datasets.spectra.Xiao2016", "skinoptics.datasets.spectra.Xiao2016.skindatabaseSpectra",
            "skinoptics.datasets.spectra.Lu2025"]
